<?xml version="1.0"?>
<package format="2">
  <name>ros_can_sim</name>
  <version>1.0.0</version>
  <description>Package to control an ackermann racecar in simulation.</description>

  <maintainer email="ignat.m.georgiev@gmail.com">Ignat Georgiev</maintainer>
  <maintainer email="loizoustephanos@gmail.com">Stephanos Loizou</maintainer>
  <maintainer email="olliejday@gmail.com">Oliver Day</maintainer>

  <license>MIT</license>

  <url type="website">http://eufs.co</url>
  <url type="repository">https://github.com/eufs/eufs_sim</url>
  <url type="bugtracker">https://github.com/eufs/eufs_sim/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>ackermann_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>eufs_msgs</depend>
  <depend>std_srvs</depend>
  <depend>python-numpy</depend>
  <depend>python-qt-bindings</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
