<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_can_sim</name>
  <version>1.0.0</version>
  <description>Package to control an ackermann racecar in simulation.</description>

  <maintainer email="siliconlad@protonmail.com">Angus Stewart</maintainer>
  <maintainer email="niklasburggraaff@gmail.com">Ignat Georgiev</maintainer>

  <license>MIT</license>

  <url type="website">http://eufs.co</url>
  <url type="repository">https://gitlab.com/eufs/eufs_sim</url>
  <url type="bugtracker">https://gitlab.com/eufs/eufs_sim/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>rclcpp</depend>
  <depend>tf</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>ackermann_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>eufs_msgs</depend>
  <depend>std_srvs</depend>
  <depend>python-numpy</depend>
  <depend>python-qt-bindings</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
<!--    <build_type>ament_python</build_type>-->
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
