<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_tutorial_cpp</name>
  <version>0.0.0</version>
  <description>ROS 2 packages for rqt_tutorial_cpp</description>
  <maintainer email="jhshim@robotis.com">Jaehyun Shim</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/JaehyunShim/ros2_tutorial_cpp</url>
  <author email="jhshim@robotis.com">Jaehyun Shim</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>qt_gui_cpp</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>

  <exec_depend>qt_gui_cpp</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_cpp</exec_depend>

  <depend>driverless_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
