<?xml version="1.0"?>
<package format="2">
  <name>testing_sim</name>
  <version>0.0.0</version>
  <description> Package with a test file to launch the simulation and test node to test if the car can complete the autocross mission </description>

  <maintainer email="info@eufs.co">EUFS</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>rospy</test_depend>s
  <test_depend>eufs_msgs</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>rostest</test_depend>

</package>
